<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Pocket League</string>
    <string name="sharedUserLabel">Pocket League App</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

	<string name="title_activity_pocketleague">Pocket League</string>
	<string name="title_activity_about_page">About</string>
	<string name="title_activity_dbSettings">Database Settings</string>
	<string name="title_activity_games">Games</string>
	<string name="title_activity_players">Players</string>
	<string name="title_activity_sessions">Sessions</string>
	<string name="title_activity_teams">Teams</string>
	<string name="title_activity_quick_game">Quick Game</string>
	<string name="title_activity_venues">Venues</string>
	<string name="title_activity_new_game">New Game</string>
	<string name="title_activity_new_player">New Player</string>
	<string name="title_activity_new_team">New Team</string>
	<string name="title_activity_new_session">New Session</string>
	<string name="title_activity_new_venue">New Venue</string>
	<string name="title_activity_game_in_progress">Game In-Progress</string>
	<string name="title_activity_detail_game">Game Summary</string>
	<string name="title_activity_detail_player">Player Details</string>
	<string name="title_activity_detail_team">Team Details</string>
	<string name="title_activity_detail_session">Session Details</string>
	<string name="title_activity_detail_venue">Venue Details</string>
	<string name="title_activity_menu_container">MenuContainerActivity</string>

	<string name="menu_about">About</string>
    <string name="menu_active">Active</string>
	<string name="menu_add">Add</string>
	<string name="menu_modify">Modify</string>
    <string name="menu_favorite">Favorite</string>

    <string name="active">Active</string>
    <string name="retired">Retired</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="inactive">Inactive</string>

	
	<string name="team_member_header"><u>Team members:</u></string>
	<string name="select_teams">Select Teams</string>
	<string name="reseed_teams">Reseed</string>
	<string name="button_newGame">New Game</string>
	<string name="create">Create</string>
	<string name="done">Done</string>
	<string name="pDet_computeStats">Get Offensive Stats</string>
	<string name="pDet_computeDefensiveStats">Get Defensive Stats</string>

    <string name="flaticon_acknowledgment">Game icons made by
        <a href="http://www.freepik.com" title="Freepik">Freepik</a>,
        <a href="http://www.icons8.com" title="Icons8">Icons8</a>,
        <a href="http://linhpham.me/miu" title="Linh Pham">Linh Pham</a>,
        <a href="http://yanlu.de" title="Yannick">Yannick</a>, and
        <a href="http://www.zurb.com" title="Zurb">Zurb</a>
        from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
        and are licensed under
        <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>.</string>

</resources>